--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criptx Portfolio</title>
     <link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" type="image/x-icon" href="criptxpfp.ico"/>
+
   </head>
   <body>
     <header>
