--- a/index.html
+++ b/index.html
@@ -1,83 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Criptx Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-	<link rel="shortcut icon" type="image/x-icon" href="criptxpfp.ico"/>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+      integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" type="image/x-icon" href="criptxpfp.ico"/>
 
   </head>
   <body>
-    <header>
-      <h1>Criptx Portfolio</h1>
-      <nav>
-        <ul>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
+    <!-- Navbar Section -->
+    <nav class="navbar">
+      <div class="navbar__container">
+        <a href="/" id="navbar__logo"><i class="fas fa-gem"></i>NEXT</a>
+        <div class="navbar__toggle" id="mobile-menu">
+          <span class="bar"></span> <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <ul class="navbar__menu">
+          <li class="navbar__item">
+            <a href="/" class="navbar__links">Home</a>
+          </li>
+          <li class="navbar__item">
+            <a href="/tech.html" class="navbar__links">Tech</a>
+          </li>
+          <li class="navbar__item">
+            <a href="/" class="navbar__links">Products</a>
+          </li>
+          <li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
         </ul>
-      </nav>
-    </header>
+      </div>
+    </nav>
 
-    <main>
-      <section class="hero">
-        <div class="hero-content">
-          <h2>Hi, I'm Kit</h2>
-          <p>I'm a YouTube video editor and thumbnail designer based in the UK.</p>
-          <a href="#contact" class="cta-button">Get in touch</a>
+    <!-- Hero Section -->
+    <div class="main">
+      <div class="main__container">
+        <div class="main__content">
+          <h1>NEXT GENERATION</h1>
+          <h2>TECHNOLOGY</h2>
+          <p>See what makes up different.</p>
+          <button class="main__btn"><a href="#">Get Started</a></button>
+        </div>
+        <div class="main__img--container">
+          <img id="main__img" src="images/pic1.svg" />
+        </div>
+      </div>
+    </div>
+
+    <!-- Services Section -->
+    <div class="services">
+      <h1>See what the hype is about</h1>
+      <div class="services__container">
+        <div class="services__card">
+          <h2>Experience Bliss</h2>
+          <p>AI Powered technology</p>
+          <button>Get Started</button>
+        </div>
+        <div class="services__card">
+          <h2>Are you Ready?</h2>
+          <p>Take the leap</p>
+          <button>Get Started</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer Section -->
+    <div class="footer__container">
+      <div class="footer__links">
+        <div class="footer__link--wrapper">
+          <div class="footer__link--items">
+            <h2>About Us</h2>
+            <a href="/sign__up">How it works</a> <a href="/">Testimonials</a>
+            <a href="/">Careers</a> <a href="/">Investments</a>
+            <a href="/">Terms of Service</a>
+          </div>
+          <div class="footer__link--items">
+            <h2>Contact Us</h2>
+            <a href="/">Contact</a> <a href="/">Support</a>
+            <a href="/">Destinations</a> <a href="/">Sponsorships</a>
+          </div>
+        </div>
+        <div class="footer__link--wrapper">
+          <div class="footer__link--items">
+            <h2>Videos</h2>
+            <a href="/">Submit Video</a> <a href="/">Ambassadors</a>
+            <a href="/">Agency</a> <a href="/">Influencer</a>
+          </div>
+          <div class="footer__link--items">
+            <h2>Social Media</h2>
+            <a href="/">Instagram</a> <a href="/">Facebook</a>
+            <a href="/">Youtube</a> <a href="/">Twitter</a>
+          </div>
+        </div>
+      </div>
+      <section class="social__media">
+        <div class="social__media--wrap">
+          <div class="footer__logo">
+            <a href="/" id="footer__logo"><i class="fas fa-gem"></i>NEXT</a>
+          </div>
+          <p class="website__rights">© NEXT 2020. All rights reserved</p>
+          <div class="social__icons">
+            <a
+              class="social__icon--link"
+              href="/"
+              target="_blank"
+              aria-label="Facebook"
+            >
+              <i class="fab fa-facebook"></i>
+            </a>
+            <a
+              class="social__icon--link"
+              href="/"
+              target="_blank"
+              aria-label="Instagram"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a
+              class="social__icon--link"
+              href="//www.youtube.com/channel/UCsKsymTY_4BYR-wytLjex7A?view_as=subscriber"
+              target="_blank"
+              aria-label="Youtube"
+            >
+              <i class="fab fa-youtube"></i>
+            </a>
+            <a
+              class="social__icon--link"
+              href="/"
+              target="_blank"
+              aria-label="Twitter"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a
+              class="social__icon--link"
+              href="/"
+              target="_blank"
+              aria-label="LinkedIn"
+            >
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </div>
         </div>
       </section>
-
-      <section class="testimonial">
-        <p>&ldquo;He’s great at editing and pays attention to detail. He’s edited a dozen or so videos for me and he’s really good at his work.&rdquo;</p>
-        <h3>- Script_ing</h3>
-      </section>
-
-      <section class="services" id="services">
-        <h2>What I offer</h2>
-        <ul>
-          <li>
-            <h3>YouTube video editing</h3>
-            <p>I can edit your raw footage into polished, professional-looking videos that will keep your viewers engaged.</p>
-          </li>
-          <li>
-            <h3>Thumbnail design</h3>
-            <p>I can create eye-catching thumbnails that will help your videos stand out in search results and attract more clicks.</p>
-          </li>
-        </ul>
-      </section>
-
-      <section class="portfolio" id="portfolio">
-        <h2>My work</h2>
-        <div class="portfolio-items">
-          <div class="portfolio-item">
-            <img src="https://via.placeholder.com/400x300.png?text=Project+1" alt="Project 1">
-            <h3>Project 1</h3>
-          </div>
-          <div class="portfolio-item">
-            <img src="https://via.placeholder.com/400x300.png?text=Project+2" alt="Project 2">
-            <h3>Project 2</h3>
-          </div>
-          <div class="portfolio-item">
-            <img src="https://via.placeholder.com/400x300.png?text=Project+3" alt="Project 3">
-            <h3>Project 3</h3>
-          </div>
-        </div>
-      </section>
-
-      <section class="contact" id="contact">
-        <h2>Get in touch</h2>
-        <form>
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required>
-
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
-
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" required></textarea>
-
-          <button type="submit">Send</button>
-        </form>
-      </section>
+    </div>
+    <script src="app.js"></script>
+  </body>
+</html>
