--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="/" id="navbar__logo"><i class="fas fa-gem"></i>NEXT</a>
+        <a href="/" id="navbar__logo"><i src="cript pfp.png"></i>CRIPX</a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
@@ -46,13 +46,13 @@
     <div class="main">
       <div class="main__container">
         <div class="main__content">
-          <h1>NEXT GENERATION</h1>
-          <h2>TECHNOLOGY</h2>
-          <p>See what makes up different.</p>
+          <h1>PROFESSIONAL</h1>
+          <h2>YOUTUBE DESIGNER AND EDITOR</h2>
+          <p>Make a difference to your channel with the best in the business.</p>
           <button class="main__btn"><a href="#">Get Started</a></button>
         </div>
         <div class="main__img--container">
-          <img id="main__img" src="images/pic1.svg" />
+          <img id="main__img" src="PrTimelinme.jpeg" />
         </div>
       </div>
     </div>
