--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="/" id="navbar__logo"><i src="cript pfp.png"></i>CRIPX</a>
+        <a href="/" id="navbar__logo"><i src="cript pfp.png"></i>CRIPTX</a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
@@ -32,7 +32,7 @@
             <a href="/" class="navbar__links">Home</a>
           </li>
           <li class="navbar__item">
-            <a href="/tech.html" class="navbar__links">Tech</a>
+            <a href="/portfolio.html" class="navbar__links">Portfolio</a>
           </li>
           <li class="navbar__item">
             <a href="/" class="navbar__links">Products</a>
@@ -62,13 +62,13 @@
       <h1>See what the hype is about</h1>
       <div class="services__container">
         <div class="services__card">
-          <h2>Experience Bliss</h2>
-          <p>AI Powered technology</p>
+          <h2>High Quality Video Edits</h2>
+          <p>Full edited, synced, captioned videos.</p>
           <button>Get Started</button>
         </div>
         <div class="services__card">
-          <h2>Are you Ready?</h2>
-          <p>Take the leap</p>
+          <h2>Top Notch Thumbnail?</h2>
+          <p>Catch you're audiences eye in an instant.</p>
           <button>Get Started</button>
         </div>
       </div>
@@ -81,24 +81,22 @@
           <div class="footer__link--items">
             <h2>About Us</h2>
             <a href="/sign__up">How it works</a> <a href="/">Testimonials</a>
-            <a href="/">Careers</a> <a href="/">Investments</a>
             <a href="/">Terms of Service</a>
           </div>
           <div class="footer__link--items">
             <h2>Contact Us</h2>
-            <a href="/">Contact</a> <a href="/">Support</a>
-            <a href="/">Destinations</a> <a href="/">Sponsorships</a>
+            <a href="/">Contact</a> 
+            <a href="/">Destinations</a> 
           </div>
         </div>
         <div class="footer__link--wrapper">
           <div class="footer__link--items">
             <h2>Videos</h2>
-            <a href="/">Submit Video</a> <a href="/">Ambassadors</a>
-            <a href="/">Agency</a> <a href="/">Influencer</a>
+
           </div>
           <div class="footer__link--items">
             <h2>Social Media</h2>
-            <a href="/">Instagram</a> <a href="/">Facebook</a>
+            <a href="/">Instagram</a> 
             <a href="/">Youtube</a> <a href="/">Twitter</a>
           </div>
         </div>
@@ -106,21 +104,14 @@
       <section class="social__media">
         <div class="social__media--wrap">
           <div class="footer__logo">
-            <a href="/" id="footer__logo"><i class="fas fa-gem"></i>NEXT</a>
+            <a href="/" id="footer__logo"><i src="criptxpfp.png"></i>CRIPTX</a>
           </div>
-          <p class="website__rights">© NEXT 2020. All rights reserved</p>
+          <p class="website__rights">© CRIPTX 2023. All rights reserved</p>
           <div class="social__icons">
             <a
+
               class="social__icon--link"
-              href="/"
-              target="_blank"
-              aria-label="Facebook"
-            >
-              <i class="fab fa-facebook"></i>
-            </a>
-            <a
-              class="social__icon--link"
-              href="/"
+              href="https://www.instagram.com/criptx2/"
               target="_blank"
               aria-label="Instagram"
             >
@@ -128,7 +119,7 @@
             </a>
             <a
               class="social__icon--link"
-              href="//www.youtube.com/channel/UCsKsymTY_4BYR-wytLjex7A?view_as=subscriber"
+              href="https://www.youtube.com/channel/UCfXCt9b7nOfaYGj60gQXllQ"
               target="_blank"
               aria-label="Youtube"
             >
@@ -136,24 +127,13 @@
             </a>
             <a
               class="social__icon--link"
-              href="/"
+              href="https://twitter.com/cr1ptx"
               target="_blank"
               aria-label="Twitter"
             >
               <i class="fab fa-twitter"></i>
             </a>
-            <a
-              class="social__icon--link"
-              href="/"
-              target="_blank"
-              aria-label="LinkedIn"
-            >
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </div>
-        </div>
-      </section>
-    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
