--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML CSS Website</title>
+    <title>Criptx Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -15,11 +15,14 @@
       href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" type="image/x-icon" href="criptxpfp.ico"/>
+
   </head>
   <body>
+    <!-- Navbar Section -->
     <nav class="navbar">
       <div class="navbar__container">
-        <a href="/" id="navbar__logo"><i class="fas fa-gem"></i>NEXT</a>
+        <a href="/" id="navbar__logo"><i src="cript pfp.png"></i>CRIPTX</a>
         <div class="navbar__toggle" id="mobile-menu">
           <span class="bar"></span> <span class="bar"></span>
           <span class="bar"></span>
@@ -29,26 +32,26 @@
             <a href="/" class="navbar__links">Home</a>
           </li>
           <li class="navbar__item">
-            <a href="/tech" class="navbar__links">Tech</a>
+            <a href="/portfolio.html" class="navbar__links">Portfolio</a>
           </li>
           <li class="navbar__item">
-            <a href="/products" class="navbar__links">Products</a>
+            <a href="/" class="navbar__links">Products</a>
           </li>
-          <li class="navbar__btn">
-            <a href="/sign-up" class="button">Sign Up</a>
-          </li>
+          <li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
         </ul>
+      </div>
+    </nav>
       </div>
     </nav>
     <div class="main">
       <div class="main__container">
         <div class="main__content">
-          <h1>TECH SECTION</h1>
-          <p>Check out our technologies</p>
+          <h1>PORTFOLIO</h1>
+          <p>Check out some of my past work!</p>
           <button class="main__btn"><a href="#">Get Started</a></button>
         </div>
         <div class="main__img-container">
-          <img id="main__img" src="images/pic2.jpg" />
+          <img id="main__img" src="criptxpfp.png" />
         </div>
       </div>
     </div>
