--- a/Contact.html
+++ b/Contact.html
@@ -21,57 +21,44 @@
   <body>
     <!-- Navbar Section -->
     <nav class="navbar">
-      <div class="navbar__container">
-        <a href="/" id="navbar__logo"><i src="cript pfp.png"></i>CRIPTX</a>
-        <div class="navbar__toggle" id="mobile-menu">
-          <span class="bar"></span> <span class="bar"></span>
-          <span class="bar"></span>
+        <div class="navbar__container">
+          <a href="/" id="navbar__logo"><i src="cript pfp.png"></i>CRIPTX</a>
+          <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span> <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+          <ul class="navbar__menu">
+            <li class="navbar__item">
+              <a href="/" class="navbar__links">Home</a>
+            </li>
+            <li class="navbar__item">
+              <a href="/portfolio.html" class="navbar__links">Portfolio</a>
+            </li>
+            <li class="navbar__item">
+              <a href="/Contact.html" class="navbar__links">Contact</a>
+            </li>
+          </ul>
         </div>
-        <ul class="navbar__menu">
-          <li class="navbar__item">
-            <a href="/" class="navbar__links">Home</a>
-          </li>
-          <li class="navbar__item">
-            <a href="/portfolio.html" class="navbar__links">Portfolio</a>
-          </li>
-          <li class="navbar__item">
-            <a href="/Contact.html" class="navbar__links">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+      </nav>
 
-    <!-- Hero Section -->
-    <div class="main">
-      <div class="main__container">
-        <div class="main__content">
-          <h1>PROFESSIONAL</h1>
-          <h2>YOUTUBE DESIGNER AND EDITOR</h2>
-          <p>Make a difference to your channel with the best in the business.</p>
-          <button class="main__btn"><a href="#">Get Started</a></button>
-        </div>
-        <div class="main__img--container">
-          <img id="main__img" src="PrTimelinme.jpeg" />
-        </div>
-      </div>
-    </div>
+   
 
-    <!-- Services Section -->
-    <div class="services">
-      <h1>See what the hype is about</h1>
-      <div class="services__container">
-        <div class="services__card">
-          <h2>High Quality Video Edits</h2>
-          <p>Full edited, synced, captioned videos.</p>
-          <button>Get Started</button>
-        </div>
-        <div class="services__card">
-          <h2>Top Notch Thumbnail?</h2>
-          <p>Catch you're audiences eye in an instant.</p>
-          <button>Get Started</button>
+    <!--Get in Touch Section -->
+    <div class="contact">
+        <div class="contact__container">
+          <div class="coantact__content">
+            <h1>Contact Me!</h1>
+            <h2>So we can start our journey together!</h2>
+            <p>eMail: kit@criptx.xyz
+               Discord: KIT#3190
+               
+            </p>
+          </div>
+          <div class="contact__img--container">
+            <img id="contact__img" src="PrTimelinme.jpeg" />
+          </div>
         </div>
       </div>
-    </div>
 
     <!-- Footer Section -->
     <div class="footer__container">
