--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,9 @@
             <a href="/portfolio.html" class="navbar__links">Portfolio</a>
           </li>
           <li class="navbar__item">
-            <a href="/" class="navbar__links">Products</a>
+            <a href="/Contact.html" class="navbar__links">Contact</a>
           </li>
-          <li class="navbar__btn"><a href="/" class="button">Sign Up</a></li>
         </ul>
-      </div>
-    </nav>
       </div>
     </nav>
     <div class="main">
@@ -59,3 +56,64 @@
     <script src="app.js"></script>
   </body>
 </html>
+
+<div class="footer__container">
+  <div class="footer__links">
+    <div class="footer__link--wrapper">
+      <div class="footer__link--items">
+        <h2>About Us</h2>
+        <a href="/sign__up">How it works</a> <a href="/">Testimonials</a>
+        <a href="/">Terms of Service</a>
+      </div>
+      <div class="footer__link--items">
+        <h2>Contact Us</h2>
+        <a href="/">Contact</a> 
+        <a href="/">Destinations</a> 
+      </div>
+    </div>
+    <div class="footer__link--wrapper">
+      <div class="footer__link--items">
+       
+
+      </div>
+      <div class="footer__link--items">
+        <h2>Social Media</h2>
+        <a href="https://www.instagram.com/criptx2/">Instagram</a> 
+        <a href="https://www.youtube.com/channel/UCfXCt9b7nOfaYGj60gQXllQ">Youtube</a> <a href="https://twitter.com/cr1ptx">Twitter</a>
+      </div>
+    </div>
+  </div>
+  <section class="social__media">
+    <div class="social__media--wrap">
+      <div class="footer__logo">
+        <a href="/" id="footer__logo"><i src="criptxpfp.png"></i>CRIPTX</a>
+      </div>
+      <p class="website__rights">© CRIPTX 2023. All rights reserved</p>
+      <div class="social__icons">
+        <a
+
+          class="social__icon--link"
+          href="https://www.instagram.com/criptx2/"
+          target="_blank"
+          aria-label="Instagram"
+        >
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a
+          class="social__icon--link"
+          href="https://www.youtube.com/channel/UCfXCt9b7nOfaYGj60gQXllQ"
+          target="_blank"
+          aria-label="Youtube"
+        >
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a
+          class="social__icon--link"
+          href="https://twitter.com/cr1ptx"
+          target="_blank"
+          aria-label="Twitter"
+        >
+          <i class="fab fa-twitter"></i>
+        </a>
+
+<script src="app.js"></script>
