update git add . git commit -m update git push
stop
@

--- a/index.html
+++ b/index.html
@@ -45,9 +45,21 @@
     <div class="main">
       <div class="main__container">
         <div class="main__content">
-          <h1>PROFESSIONAL</h1>
-          <h2>YOUTUBE DESIGNER AND EDITOR</h2>
-          <p>Make a difference to your channel with the best in the business.</p>
+          <h1>Contact me so we can start working together now!</h1>
+          <p>eMail: kit@criptx.xyz
+            Discord: KIT#3190
+            
+          </p>
+        </div>
+        <div class="main__img-container">
+          <img id="main__img" src="criptxpfp.png" />
+        </div>
+      </div>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
+</html>
           
         </div>
         <div class="main__img--container">
