--- a/Contact.html
+++ b/Contact.html
@@ -46,19 +46,22 @@
     <!--Get in Touch Section -->
     <div class="contact">
         <div class="contact__container">
-          <div class="coantact__content">
-            <h1>Contact Me!</h1>
-            <h2>So we can start our journey together!</h2>
+          <div class="contact__content">
+            <h1>Contact me so we can start working together now!</h1>
             <p>eMail: kit@criptx.xyz
-               Discord: KIT#3190
-               
+              Discord: KIT#3190
+              
             </p>
           </div>
-          <div class="contact__img--container">
-            <img id="contact__img" src="PrTimelinme.jpeg" />
+          <div class="contact__img-container">
+            <img id="contact__img" src="criptxpfp.png" />
           </div>
         </div>
       </div>
+  
+      <script src="app.js"></script>
+    </body>
+  </html>
 
     <!-- Footer Section -->
     <div class="footer__container">
