--- a/Contact.html
+++ b/Contact.html
@@ -44,17 +44,18 @@
    
 
     <!--Get in Touch Section -->
-    <div class="contact">
-        <div class="contact__container">
-          <div class="contact__content">
-            <h1>Contact me so we can start working together now!</h1>
+    <div class="main">
+        <div class="main__container">
+          <div class="main__content">
+            <h1>Contact Me</h1>
+            <h2>So we can work together!</h2>
             <p>eMail: kit@criptx.xyz
-              Discord: KIT#3190
-              
+                Discord: <KIT#3190>
+  
             </p>
           </div>
-          <div class="contact__img-container">
-            <img id="contact__img" src="criptxpfp.png" />
+          <div class="main__img-container">
+            <img id="main__img" src="PrTimelinme.jpeg" />
           </div>
         </div>
       </div>
