--- a/Contact.html
+++ b/Contact.html
@@ -50,7 +50,8 @@
             <h1>Contact Me</h1>
             <h2>So we can work together!</h2>
             <p>eMail: kit@criptx.xyz
-                Discord: <KIT#3190>
+                
+                Discord: KIT#3190
   
             </p>
           </div>
