--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 
     <!-- Services Section -->
     <div class="services">
-      <h1>Still not convinced? See what the hype is about</h1>
+      <a href="/portfolio.html">
+      <button><h1>Still not convinced? See what the hype is about</h1><button>
+      </a>
+
       <div class="services__container">
         <div class="services__card">
           <h2>High Quality Video Edits</h2>
