--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
 
     <!-- Services Section -->
     <div class="services">
-      <a href="/portfolio.html">
-      <button><h1>Still not convinced? See what the hype is about</h1><button>
-      </a>
+      <h1>Still not convinced? See what the hype is about</h1>
+      
 
       <div class="services__container">
         <div class="services__card">
