--- a/Contact.html
+++ b/Contact.html
@@ -49,7 +49,7 @@
           <div class="main__content">
             <h1>Contact Me</h1>
             <h2>So we can work together!</h2>
-            <p>eMail: kit@criptx.xyz \n Discord: KIT#3190
+            <p>eMail: kit@criptx.xyz <br>Discord: KIT#3190
   
             </p>
           </div>
